<resources>
    <string name="app_name">Лічильник</string>
    <string name="first_button">Прийняти час</string>
    <string name="id">Час у хвилинах</string>
    <string name="id_2">дата</string>
    <string name="second_button">Скинути час</string>
    <string name="continue_time">00:00:00</string>
    <string name="current_time">Даний час:</string>
    <string name="final_stage">Created by Dmitry Zinchenko</string>
    <string name="update">UPDATE</string>
    <string name="name">name</string>
    <string name="phone_no">phone</string>
    <string name="address">address</string>
    <string name="base_text">хв</string>
    <string name="TV_random_text">123</string>
    <string name="get_data">Хронологія</string>
    <string name="secondactivity">secondactivity</string>
    <string name="delete">Видалити запис</string>
    <string name="backup">Повернутися та зупинити відлік</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_random">Рандомайзер</string>
    <string name="_0">0</string>
    <string name="first_number">Від</string>
    <string name="second_number">до</string>
</resources>