<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".UpdateData">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="30sp"
        android:id="@+id/name"
        android:layout_marginRight="20sp"

        android:hint="@string/name"
        android:padding="20sp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:id="@+id/phone"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20sp"

        android:hint="@string/phone_no"
        android:padding="20sp"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="30sp"
        android:id="@+id/address"
        android:layout_marginRight="20sp"

        android:hint="@string/address"
        android:padding="20sp"
        android:singleLine="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:id="@+id/btn_update"
        android:background="@color/cardview_dark_background"
        android:text="@string/update"
        android:paddingHorizontal="30sp"
        android:textColor="#fff"
        android:textSize="16sp" />



</LinearLayout>