<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/image"

    >

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/id_2"
        android:textSize="15sp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:textColor="@color/white">

        <EditText
            android:id="@+id/et_set_time_off_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline"
            android:drawableLeft="@drawable/ic_baseline"
            android:hint="@string/id"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="time"
            android:padding="10dp"
            android:textSize="15sp"

            />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <Button
            android:id="@+id/v_second_button"
            android:layout_width="120dp"
            android:layout_height="70dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="15dp"
            android:text="@string/second_button"
            app:backgroundTint="#7F15AC" />
        <Button

            android:id="@+id/b_first_button"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="20dp"
            android:text="@string/first_button"
            app:backgroundTint="#7F15AC" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:visibility="visible"
            android:id="@+id/tv_continue_time"
            android:text="@string/continue_time"
            android:textColor="@color/white"
            />


    </LinearLayout>



</LinearLayout>